--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.35.3",
+    "axios": "^0.22.0",
+    "clsx": "^2.0.0",
+    "next": "14.0.4",
     "react": "^18",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "sass": "^1.69.5",
+    "typescript": "^5"
   }
 }
